--- a/src/AllDonationPost.css
+++ b/src/AllDonationPost.css
@@ -5,3 +5,12 @@
     width: 100%; /* 화면 전체 너비 */
     box-sizing: border-box; /* padding 포함한 박스 크기 계산 */
   }
+  .mypage-container {
+    flex: 1; /* 마이페이지가 나머지 공간을 차지 */
+    max-width: 250px; /* 최대 너비 제한 */
+    border-left: 1px solid #ddd;
+    padding-left: 20px;
+    box-sizing: border-box;
+  }
+
+  
