--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,5 +1,19 @@
-body {
+/* 기본 초기화 설정 */
+* {
+  box-sizing: border-box;
+}
+
+/* 기본 설정 */
+html, body, #root {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto; /* 수직 스크롤 가능 */
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
