--- a/front/src/App.css
+++ b/front/src/App.css
@@ -4,11 +4,17 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  background-attachment: scroll; /* 배경 스크롤 설정 */
+  background-size: cover; /* 전체 채우기 */
+  background-position: center; /* 중앙 정렬 */
+  height: auto; /* 콘텐츠 길이에 맞게 조정 */
+  min-height: 100vh; /* 최소 높이 설정 */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; /* 상단 정렬 */
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 50px 20px; /* 상하 여백 추가 */
+  margin: 0;
 }
