--- a/front/src/Board.css
+++ b/front/src/Board.css
@@ -71,6 +71,7 @@
   text-align: center; /* 중앙 정렬 */
   margin-top: 10px; /* 텍스트와 원 사이의 간격 조정 */
   font-family: 'Lato', sans-serif; /* 예쁜 글씨체 적용 */
+  color: black;
 }
 
 /* 하단 콘텐츠 영역 (슬라이드와 빈 공간 포함) */
@@ -137,7 +138,7 @@
 /* 오른쪽 빈 공간 */
 .empty-box {
   flex: 1; /* 남은 공간을 동일하게 차지 */
-  background-color: #f8f8f8; /* 배경색 */
+  background-color: #fffff0; /* 배경색 */
   border-radius: 10px; /* 테두리를 둥글게 */
   padding: 20px; /* 내부 여백 */
   height: 100%; /* 높이를 부모에 맞춤 */
