--- a/front/src/Mypagedetail.css
+++ b/front/src/Mypagedetail.css
@@ -13,7 +13,7 @@
 .profileBox {
   flex: 3;
   height: 100vh;
-  background-color: #ffffff;
+  background-color:#fffff0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -22,7 +22,7 @@
   gap: 20px;
   box-sizing: border-box;
   overflow: auto;
-  margin: 0 auto;
+  margin: 1%;
   border-right: 1px solid #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
